--- a/src/styles/blocks/navbar.css
+++ b/src/styles/blocks/navbar.css
@@ -28,6 +28,7 @@
   gap: var(--space-2xs);
   align-items: center;
   font-size: var(--size-step-0);
+  transform: translateY(0.2ex);
 }
 
 .navbar__items-icons button {
