--- a/src/styles/global/variables.css
+++ b/src/styles/global/variables.css
@@ -14,9 +14,9 @@
   --transition-movement: 200ms linear;
   --transition-fade: 300ms ease;
   --transition-bounce: 500ms cubic-bezier(0.5, 0.05, 0.2, 1.5);
-  --stroke: 1px dashed var(--color-secondary);
-  --stroke-solid: 1px solid var(--color-secondary);
-  --radius-s: 0.2rem;
+  --stroke: 2px dashed var(--color-secondary);
+  --stroke-solid: 2px solid var(--color-secondary);
+  --radius-s: 0.3rem;
   --radius-m: 0.75rem;
   --radius-l: 2.5rem;
   --uppercase-kerning: 0.4ch;
